NetBSD Problem Report #47535

From martin@aprisoft.de  Wed Feb  6 14:30:37 2013
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 0DF4F63E8B1
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  6 Feb 2013 14:30:37 +0000 (UTC)
Message-Id: <20130206143029.0443EED0E4C@emmas.aprisoft.de>
Date: Wed,  6 Feb 2013 15:30:29 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: sqlite failure on sparc64
X-Send-Pr-Version: 3.95

>Number:         47535
>Category:       port-sparc64
>Synopsis:       sqlite failure on sparc64
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Feb 06 14:35:00 +0000 2013
>Closed-Date:    Wed Mar 13 08:13:41 +0000 2013
>Last-Modified:  Wed Mar 13 08:13:41 +0000 2013
>Originator:     Martin Husemann
>Release:        NetBSD 6.99.16
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD whoever-brings-the-night.aprisoft.de 6.99.16 NetBSD 6.99.16 (WHOEVER) #20: Mon Feb 4 12:20:15 CET 2013 martin@emmas.aprisoft.de:/usr/src/sys/arch/sparc64/compile/WHOEVER sparc64
Architecture: sparc64
Machine: sparc64
>Description:

This is a test from Edward Berner posted to the Fossil users list:

sqlite3
SQLite version 3.7.10 2012-01-16 13:28:40
Enter ".help" for instructions
Enter SQL statements terminated with a ";"
sqlite> select 2456247.350942061;
25,,25-.4+1/421-

>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-sparc64-maintainer->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Wed, 06 Feb 2013 14:36:47 +0000
Responsible-Changed-Why:
Take


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47535 CVS commit: src/external/public-domain/sqlite
Date: Thu, 14 Feb 2013 17:12:24 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Feb 14 17:12:24 UTC 2013

 Modified Files:
 	src/external/public-domain/sqlite/bin: Makefile
 	src/external/public-domain/sqlite/dist: sqlite3.c

 Log Message:
 When converting long double values to decimal, convert to int via a call
 to floor(), so the conversion does not depend on current rounding mode.
 Fixes PR port-sparc64/47535.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/external/public-domain/sqlite/bin/Makefile
 cvs rdiff -u -r1.6 -r1.7 src/external/public-domain/sqlite/dist/sqlite3.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47535 CVS commit: src/lib/libc/arch/sparc64/softfloat
Date: Fri, 15 Feb 2013 09:24:06 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Feb 15 09:24:05 UTC 2013

 Modified Files:
 	src/lib/libc/arch/sparc64/softfloat: qp.c

 Log Message:
 Make all conversions from 128bit (long double) floats to integral types
 use rounding towards zero (casts to int/long are not affected by current
 rounding mode).
 Fixes PR port-sparc64/47535.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/lib/libc/arch/sparc64/softfloat/qp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: PR/47535 CVS commit: src/lib/libc/arch/sparc64/softfloat
Date: Fri, 15 Feb 2013 10:26:08 +0100

 On Fri, Feb 15, 2013 at 09:25:06AM +0000, Martin Husemann wrote:
 > The following reply was made to PR port-sparc64/47535; it has been noted by GNATS.
 > 
 > From: "Martin Husemann" <martin@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc: 
 > Subject: PR/47535 CVS commit: src/lib/libc/arch/sparc64/softfloat
 > Date: Fri, 15 Feb 2013 09:24:06 +0000
 > 
 >  Module Name:	src
 >  Committed By:	martin
 >  Date:		Fri Feb 15 09:24:05 UTC 2013
 >  
 >  Modified Files:
 >  	src/lib/libc/arch/sparc64/softfloat: qp.c
 >  
 >  Log Message:
 >  Make all conversions from 128bit (long double) floats to integral types
 >  use rounding towards zero (casts to int/long are not affected by current
 >  rounding mode).
 >  Fixes PR port-sparc64/47535.

 For the record: this was the real fix, the previous try (use floor() in
 sqlite) has been backed out.

 Martin

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47535 CVS commit: [netbsd-6] src/lib/libc/arch/sparc64/softfloat
Date: Mon, 18 Feb 2013 18:10:59 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Mon Feb 18 18:10:58 UTC 2013

 Modified Files:
 	src/lib/libc/arch/sparc64/softfloat [netbsd-6]: qp.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #825):
 	lib/libc/arch/sparc64/softfloat/qp.c: revision 1.10
 Make all conversions from 128bit (long double) floats to integral types
 use rounding towards zero (casts to int/long are not affected by current
 rounding mode).
 Fixes PR port-sparc64/47535.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.7.24.1 src/lib/libc/arch/sparc64/softfloat/qp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 13 Mar 2013 08:13:41 +0000
State-Changed-Why:
Fixed and pulled up


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.