When converting long double values to decimal, convert to int via a call to floor(), so the conversion does not depend on current rounding mode. Fixes PR port-sparc64/47535.